Fix link color
The items in the draw menu are not visible with white on white.

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,6 @@ code {
 }
 
 a {
-  color: #FFFFFF;
+  color: rgba(0, 0, 0, 0.87);
   text-decoration: none;
 }
